# littleton

./: LICENSE.md  Makefile  README.md  conveyances.opam  dune-project  test.toml
doc/lawrev/: main.toc  main.xdv
doc/prolala2022/: paper.dvi  paper.xcp
examples/: basic.json  basic.toml  class.json  class.toml  concurrent.json  concurrent.toml  determinable.json  determinable.toml  executory.json  executory.toml  index.json  lifeestate.json  lifeestate.toml  misc.json  misc.toml  onward.json  onward.toml  precedent.json  precedent.toml  rap.json  rap.toml  tail.json  tail.toml  tutorial.json  tutorial.toml  vesting.json  vesting.toml  wills.json  wills.toml  years.json  years.toml
lib/: META  annotate.ml  annotate.mli  classgift.ml  classgift.mli  classify.ml  classify.mli  common.ml  common.mli  condition.ml  condition.mli  conveyance.mldylib  conveyance.mlpack  dune  event.ml  event.mli  example.ml  family.ml  family.mli  interest.ml  interest.mli  parameters.ml  parameters.mli  parser.ml  parser.mli  predicate.ml  predicate.mli  program.ml  program.mli  semantics.ml  semantics.mli  term.ml  term.mli  test.ml  test.mli  util.ml  util.mli
misc/: littleton.service  run-website.sh  update.sh
tests/: basic.toml  general.toml  onward.toml  split.sh  test.toml  test14.convey  test15.convey  test9.convey
tests/edwards/: ch1.toml  ch10.toml  ch11.toml  ch2.toml  ch3.toml  ch4.toml  (+5 more)
website/: codeblocks.lua  config.toml  dune  help.html  help.md  index.html  interpreter.html  mk-tutorial.sh  site.ml  template.html  textbook.html  textbook.md  tutorialscraps.md
(+17 files in other folders)
